# scroll-shot

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  product-spec.md  roadmap.md
extension/: README.md  manifest.json  popup.html
extension/src/: background.js  content.js  popup.css  popup.js
platform/macos/: ScrollShotCountdownHelper.swift  ScrollShotDetectHelper.swift  ScrollShotScrollHelper.swift
src/: README.md
src/scrollshot/: __init__.py  capture.py  cli.py  countdown.py  selection.py  selftest.py  stitch.py  targeting.py
