[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scroll-shot"
version = "0.1.0"
description = "High-quality scrolling screenshots anywhere on your desktop."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Tarush V Kosgi" }]
dependencies = [
  "Pillow>=10",
  "numpy>=1.24",
  "opencv-python>=4.8",
]

[project.scripts]
scrollshot = "scrollshot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
